// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormDmn tests should create a text field and a label 1`] = `
<span
  class="pf-c-form__label-text"
>
  name
</span>
`;

exports[`FormDmn tests should have placeholder 1`] = `
<span
  class="pf-c-select__toggle-text"
>
  Select...
</span>
`;

exports[`FormDmn tests should remove require parameter 1`] = `
<div>
  <div
    data-testid="form-base"
  >
    <form
      class="pf-c-form"
      data-testid="base-form"
      novalidate=""
    >
      <div>
        <div
          class="pf-c-form__group"
          data-testid="wrapper-field"
          style="padding: 5px;"
        >
          <div
            class="pf-c-form__group-label"
          >
            <label
              class="pf-c-form__label"
              for="uniforms-0007-0001"
            >
              <span
                class="pf-c-form__label-text"
              >
                name
              </span>
            </label>
             
          </div>
          <div
            class="pf-c-form__group-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-22"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0007-0001"
              name="name"
              placeholder=""
              style="padding: 5px;"
              type="text"
              value=""
            />
            
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormDmn tests should render the DMN Form 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0000-0001"
          >
            <span
              class="pf-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0000-0001"
            name="name"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Kogito"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0000-0003"
          >
            <span
              class="pf-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0000-0003"
            name="lastName"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Tooling"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0000-0005"
          >
            <span
              class="pf-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-3"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0000-0005"
            name="daysAndTimeDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="P1D"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0000-0007"
          >
            <span
              class="pf-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-4"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0000-0007"
            name="yearsAndMonthDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value=""
          />
          
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests should submit the formInputs 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0001-0001"
          >
            <span
              class="pf-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-5"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0001-0001"
            name="name"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Kogito"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0001-0003"
          >
            <span
              class="pf-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-6"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0001-0003"
            name="lastName"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Tooling"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0001-0005"
          >
            <span
              class="pf-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-7"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0001-0005"
            name="daysAndTimeDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="P1D"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0001-0007"
          >
            <span
              class="pf-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-8"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0001-0007"
            name="yearsAndMonthDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value=""
          />
          
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests should validate the formInputs - invalid 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0004-0001"
          >
            <span
              class="pf-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-17"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0004-0001"
            name="name"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Kogito"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0004-0003"
          >
            <span
              class="pf-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-18"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0004-0003"
            name="lastName"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Tooling"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0004-0005"
          >
            <span
              class="pf-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="true"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-19"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0004-0005"
            name="daysAndTimeDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="p"
          />
          <div
            aria-live="polite"
            class="pf-c-form__helper-text pf-m-error"
            id="uniforms-0004-0005-helper"
          >
            should match format P1D(ays)T2H(ours)3M(inutes)1S(econds)
          </div>
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0004-0007"
          >
            <span
              class="pf-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-20"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0004-0007"
            name="yearsAndMonthDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value=""
          />
          
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests should validate the formInputs - success 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0003-0001"
          >
            <span
              class="pf-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-13"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0003-0001"
            name="name"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Kogito"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0003-0003"
          >
            <span
              class="pf-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-14"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0003-0003"
            name="lastName"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="Tooling"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0003-0005"
          >
            <span
              class="pf-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-15"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0003-0005"
            name="daysAndTimeDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="P1D"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0003-0007"
          >
            <span
              class="pf-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-16"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0003-0007"
            name="yearsAndMonthDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value=""
          />
          
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests shouldn't submit the formInputs 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0002-0001"
          >
            <span
              class="pf-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-9"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0002-0001"
            name="name"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value=""
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0002-0003"
          >
            <span
              class="pf-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-10"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0002-0003"
            name="lastName"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value=""
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0002-0005"
          >
            <span
              class="pf-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="true"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-11"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0002-0005"
            name="daysAndTimeDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value="p"
          />
          <div
            aria-live="polite"
            class="pf-c-form__helper-text pf-m-error"
            id="uniforms-0002-0005-helper"
          >
            should match format P1D(ays)T2H(ours)3M(inutes)1S(econds)
          </div>
        </div>
      </div>
      <div
        class="pf-c-form__group"
        data-testid="wrapper-field"
        style="padding: 5px;"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0002-0007"
          >
            <span
              class="pf-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            aria-label="uniforms text field"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-12"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="text-field"
            id="uniforms-0002-0007"
            name="yearsAndMonthDuration"
            placeholder=""
            style="padding: 5px;"
            type="text"
            value=""
          />
          
        </div>
      </div>
    </div>
  </form>
</div>
`;
